--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@canvasjs/angular-charts": "^1.2.0",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
+    "angular-three": "^3.7.2",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
+    "three": "^0.172.0",
+    "three-orbit-controls": "^82.1.0",
+    "three-stl-loader": "^1.0.6",
     "tslib": "^2.3.0",
     "uuid": "^11.1.0",
     "zone.js": "~0.15.0"
@@ -37,6 +42,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@angular/localize": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/three": "^0.175.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
