--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "private": true,
   "dependencies": {
     "@angular/cdk": "^19.2.8",
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
+    "@angular/common": "^19.2.7",
+    "@angular/compiler": "^19.2.7",
+    "@angular/core": "^19.2.7",
+    "@angular/forms": "^19.2.7",
     "@angular/material": "^19.2.8",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/router": "^19.2.0",
+    "@angular/platform-browser": "^19.2.7",
+    "@angular/platform-browser-dynamic": "^19.2.7",
+    "@angular/router": "^19.2.7",
+    "@angular/service-worker": "^19.2.7",
     "@canvasjs/angular-charts": "^1.2.0",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
@@ -27,6 +28,8 @@
     "bootstrap": "^5.3.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "three": "^0.172.0",
@@ -42,6 +45,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@angular/localize": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/pdfmake": "^0.2.11",
     "@types/three": "^0.175.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
