Updated nginx configuration

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,47 @@
+# events {}
+
+# http {
+#   include       mime.types;
+#   default_type  application/octet-stream;
+
+#   sendfile        on;
+#   keepalive_timeout  65;
+
+#   server {
+#     listen 80;
+#     server_name localhost;
+
+#     # Serve /docs, /sounds, /images, /stl directly
+#     location /docs/ {
+#       alias /usr/share/nginx/html/docs/;
+#     }
+
+#     location /sounds/ {
+#       alias /usr/share/nginx/html/sounds/;
+#     }
+
+#     location /images/ {
+#       alias /usr/share/nginx/html/images/;
+#     }
+
+#     location /stl/ {
+#       alias /usr/share/nginx/html/stl/;
+#     }
+
+#     # Serve common static file types from Angular build output
+#     location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff2?|ttf|pdf|mp3|stl|eot|json|webmanifest)$ {
+#       root /usr/share/nginx/html;
+#       access_log off;
+#       expires 1y;
+#     }
+
+#     # Redirect all other routes (Angular paths) to index.html
+#     location / {
+#       try_files $uri /index.html;
+#     }
+#   }
+# }
+
 events {}
 
 http {
@@ -11,33 +55,40 @@ http {
     listen 80;
     server_name localhost;
 
-    # Serve /docs, /sounds, /images, /stl directly
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Serve static assets
     location /docs/ {
       alias /usr/share/nginx/html/docs/;
+      try_files $uri $uri/ =404;
     }
 
     location /sounds/ {
       alias /usr/share/nginx/html/sounds/;
+      try_files $uri $uri/ =404;
     }
 
     location /images/ {
       alias /usr/share/nginx/html/images/;
+      try_files $uri $uri/ =404;
     }
 
     location /stl/ {
       alias /usr/share/nginx/html/stl/;
+      try_files $uri $uri/ =404;
     }
 
-    # Serve common static file types from Angular build output
+    # Cache common assets
     location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff2?|ttf|pdf|mp3|stl|eot|json|webmanifest)$ {
-      root /usr/share/nginx/html;
       access_log off;
       expires 1y;
+      try_files $uri =404;
     }
 
-    # Redirect all other routes (Angular paths) to index.html
+    # Angular routes fallback
     location / {
-      try_files $uri /index.html;
+      try_files $uri $uri/ /index.html;
     }
   }
 }
