--- a/nginx.conf
+++ b/nginx.conf
@@ -42,53 +42,60 @@
 #   }
 # }
 
-events {}
+//
 
-http {
-  include       mime.types;
-  default_type  application/octet-stream;
+# events {}
 
-  sendfile        on;
-  keepalive_timeout  65;
+# http {
+#   include       mime.types;
+#   default_type  application/octet-stream;
 
-  server {
-    listen 80;
-    server_name localhost;
+#   sendfile        on;
+#   keepalive_timeout  65;
 
-    root /usr/share/nginx/html;
-    index index.html;
+#   server {
 
-    # Serve static assets
-    location /docs/ {
-      alias /usr/share/nginx/html/docs/;
-      try_files $uri $uri/ =404;
-    }
+#     root /usr/share/nginx/html;
+#     index index.html;
+#     try_files $uri $uri/ /index.html;
 
-    location /sounds/ {
-      alias /usr/share/nginx/html/sounds/;
-      try_files $uri $uri/ =404;
-    }
+#     gzip on;
+#     gzip_types      text/css application/javascript application/json image/svg+xml;
+#     gzip_proxied    no-cache no-store private expired auth;
+#     gzip_comp_level 6;
+#     etag on;
 
-    location /images/ {
-      alias /usr/share/nginx/html/images/;
-      try_files $uri $uri/ =404;
-    }
+#     # Serve static assets
+#     location /docs/ {
+#       alias /usr/share/nginx/html/docs/;
+#       try_files $uri $uri/ =404;
+#     }
 
-    location /stl/ {
-      alias /usr/share/nginx/html/stl/;
-      try_files $uri $uri/ =404;
-    }
+#     location /sounds/ {
+#       alias /usr/share/nginx/html/sounds/;
+#       try_files $uri $uri/ =404;
+#     }
 
-    # Cache common assets
-    location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff2?|ttf|pdf|mp3|stl|eot|json|webmanifest)$ {
-      access_log off;
-      expires 1y;
-      try_files $uri =404;
-    }
+#     location /images/ {
+#       alias /usr/share/nginx/html/images/;
+#       try_files $uri $uri/ =404;
+#     }
 
-    # Angular routes fallback
-    location / {
-      try_files $uri $uri/ /index.html;
-    }
-  }
-}
+#     location /stl/ {
+#       alias /usr/share/nginx/html/stl/;
+#       try_files $uri $uri/ =404;
+#     }
+
+#     # Cache common assets
+#     location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff2?|ttf|pdf|mp3|stl|eot|json|webmanifest)$ {
+#       access_log off;
+#       expires 1y;
+#       try_files $uri =404;
+#     }
+
+#     # Angular routes fallback
+#     location / {
+#       try_files $uri $uri/ /index.html;
+#     }
+#   }
+# }
